--- a/guess_number.ipynb
+++ b/guess_number.ipynb
@@ -1,31 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "orig_nbformat": 4,
-    "language_info": {
-      "name": "python",
-      "version": "3.7.7",
-      "mimetype": "text/x-python",
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "pygments_lexer": "ipython3",
-      "nbconvert_exporter": "python",
-      "file_extension": ".py"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3.7.7 64-bit ('ds': conda)"
-    },
-    "interpreter": {
-      "hash": "09714a52f69239c6409b3d073f9f3ca0ddb4056fc648d88f7346d3f36a5c4020"
-    },
-    "colab": {
-      "provenance": []
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -53,14 +26,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
         "id": "KIy8PgXL-2fH"
       },
+      "outputs": [],
       "source": [
         "import numpy as np"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -91,9 +64,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
       "metadata": {
         "id": "pJaQGNND-2fK"
       },
+      "outputs": [],
       "source": [
         "def random_predict(number: int = 1) -> int:\n",
         "    \"\"\"Просто угадываем на random, никак не используя информацию о больше или меньше.\n",
@@ -114,9 +89,7 @@
         "            break  # выход из цикла если угадали\n",
         "\n",
         "    return count\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -138,9 +111,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
       "metadata": {
         "id": "bFzp7ROY_QYY"
       },
+      "outputs": [],
       "source": [
         "def game_core_v2(number: int = 1) -> int:\n",
         "    \"\"\"Сначала устанавливаем любое random число, а потом уменьшаем\n",
@@ -164,9 +139,7 @@
         "            predict -= 1\n",
         "\n",
         "    return count"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -197,9 +170,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
       "metadata": {
         "id": "t4WXEDFS_ThY"
       },
+      "outputs": [],
       "source": [
         "def score_game(random_predict) -> int:\n",
         "    \"\"\"За какое количество попыток в среднем за 10000 подходов угадывает наш алгоритм\n",
@@ -219,9 +194,7 @@
         "\n",
         "    score = int(np.mean(count_ls))\n",
         "    print(f\"Ваш алгоритм угадывает число в среднем за: {score} попытки\")"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -235,13 +208,24 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
       "metadata": {
-        "id": "khrxOcEB-2fM",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "khrxOcEB-2fM",
         "outputId": "1df30af3-6ad7-4145-a243-8703bb09220f"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Run benchmarking for random_predict: Ваш алгоритм угадывает число в среднем за: 100 попытки\n",
+            "Run benchmarking for game_core_v2: Ваш алгоритм угадывает число в среднем за: 33 попытки\n"
+          ]
+        }
+      ],
       "source": [
         "#Run benchmarking to score effectiveness of all algorithms\n",
         "print('Run benchmarking for random_predict: ', end='')\n",
@@ -249,17 +233,6 @@
         "\n",
         "print('Run benchmarking for game_core_v2: ', end='')\n",
         "score_game(game_core_v2)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Run benchmarking for random_predict: Ваш алгоритм угадывает число в среднем за: 99 попытки\n",
-            "Run benchmarking for game_core_v2: Ваш алгоритм угадывает число в среднем за: 33 попытки\n"
-          ]
-        }
       ]
     },
     {
@@ -292,13 +265,15 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
       "metadata": {
-        "id": "IvaUUPIe-2fN",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "IvaUUPIe-2fN",
         "outputId": "5e8bd6f1-4112-4548-f6bd-5082c0137af0"
       },
+      "outputs": [],
       "source": [
         "def game_core_v3(number: int = 1) -> int:\n",
         "    \"\"\"\n",
@@ -308,35 +283,25 @@
         "    Returns:\n",
         "        int: Число попыток\n",
         "    \"\"\"\n",
-        "    # Ваш код начинается здесь\n",
+        "    \n",
+        "    # Объявляем переменные минимума и максимума диапазона поиска\n",
+        "    # Также создаем счетчик попыток и пустую переменную predict\n",
         "    count = 0\n",
-        "    min_num = 1\n",
-        "    max_num = 101\n",
-        "    predict = np.random.randint(min_num, max_num)\n",
-        "\n",
+        "    min_num = 0\n",
+        "    max_num = 100\n",
+        "    predict = None\n",
+        "    \n",
+        "    # Методом бинарного поиска ищем загаданное число, с каждым циклом увеличивая счетчик\n",
         "    while number != predict:\n",
         "        count += 1\n",
+        "        predict = round((min_num+max_num)/2)\n",
         "        if predict > number:\n",
         "            max_num = predict\n",
-        "            predict = np.random.randint(min_num, max_num)\n",
-        "        elif predict < number:\n",
+        "        else:\n",
         "            min_num = predict\n",
-        "            predict = np.random.randint(min_num, max_num)\n",
         "\n",
-        "    # Ваш код заканчивается здесь\n",
-        "\n",
-        "    return count\n",
-        "print(game_core_v3(100))"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "4\n"
-          ]
-        }
+        "    # Возвращаем количество попыток\n",
+        "    return count"
       ]
     },
     {
@@ -350,26 +315,26 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
       "metadata": {
-        "id": "giSKBUmgCAeh",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "giSKBUmgCAeh",
         "outputId": "91480fb3-72db-49b7-d22c-df237633db36"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Run benchmarking for game_core_v3: Ваш алгоритм угадывает число в среднем за: 5 попытки\n"
+          ]
+        }
+      ],
       "source": [
         "print('Run benchmarking for game_core_v3: ', end='')\n",
         "score_game(game_core_v3)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Run benchmarking for game_core_v3: Ваш алгоритм угадывает число в среднем за: 7 попытки\n"
-          ]
-        }
       ]
     },
     {
@@ -381,5 +346,32 @@
         "Напомним, что для успешного решения задания программа должна угадывать число меньше чем за 20 попыток!"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "interpreter": {
+      "hash": "09714a52f69239c6409b3d073f9f3ca0ddb4056fc648d88f7346d3f36a5c4020"
+    },
+    "kernelspec": {
+      "display_name": "Python 3.7.7 64-bit ('ds': conda)",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.10"
+    },
+    "orig_nbformat": 4
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
